# aurora_backend_service

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run_api.py  wait-for-services.sh
lambda/: social_media_crawl_lambda.py  trend_forecasting_algorithm.py  trending_forecast_lambda.py  webscraper_lambda.py
migrations/: env.py
migrations/versions/: initial_migration.py
src/aurora_backend_llm/: app.py  crew.py  inventory_report.md  main.py
src/aurora_backend_llm/api/: __init__.py  api_service.py  graphql_schema.py  main_routes.py  pos_routes.py  skus_routes.py  user_routes.py
src/aurora_backend_llm/api/auth/: __init__.py  routes.py
src/aurora_backend_llm/config/: agents.yaml  tasks.yaml
src/aurora_backend_llm/db/: __init__.py  database.py  models.py
